--- a/frontend/src/app/modules/main/components/expense-report/expense-report.component.html
+++ b/frontend/src/app/modules/main/components/expense-report/expense-report.component.html
@@ -1,21 +1,21 @@
-<div class="overflow-auto">
-    <div *ngIf="isBusy" class="p-3">
-        <content-loader viewBox="0 0 300 88" *ngFor="let arr of createRange(3)">
-            <svg:circle cx="10" cy="20" r="8" />
-            <svg:rect x="25" y="15" rx="5" ry="5" width="270" height="10" />
-            <svg:circle cx="10" cy="50" r="8" />
-            <svg:rect x="25" y="45" rx="5" ry="5" width="270" height="10" />
-            <svg:circle cx="10" cy="80" r="8" />
-            <svg:rect x="25" y="75" rx="5" ry="5" width="270" height="10" />
-        </content-loader>
-    </div>
-    <div *ngIf="!isBusy">
-        <nb-list>
-            <nb-list-item class="d-flex justify-content-between border-bottom">
-                <span class="text-hint">{{ dateFrom | date: 'mediumDate' }}</span>
-                <nb-icon icon="arrow-forward-outline" class="mx-3"></nb-icon>
-                <span class="text-hint">{{ dateTo | date: 'mediumDate' }}</span>
-            </nb-list-item>
+<nb-card class="mb-0 border-0">
+    <nb-card-header class="with-background font-weight-normal text-center">
+        <span class="text-hint">{{ dateFrom | date: 'mediumDate' }}</span>
+        <nb-icon icon="arrow-forward-outline" class="mx-3"></nb-icon>
+        <span class="text-hint">{{ dateTo | date: 'mediumDate' }}</span>
+    </nb-card-header>
+    <nb-card-body class="p-0">
+        <div *ngIf="isBusy" class="p-3">
+            <content-loader viewBox="0 0 300 88" *ngFor="let arr of createRange(3)">
+                <svg:circle cx="10" cy="20" r="8" />
+                <svg:rect x="25" y="15" rx="5" ry="5" width="270" height="10" />
+                <svg:circle cx="10" cy="50" r="8" />
+                <svg:rect x="25" y="45" rx="5" ry="5" width="270" height="10" />
+                <svg:circle cx="10" cy="80" r="8" />
+                <svg:rect x="25" y="75" rx="5" ry="5" width="270" height="10" />
+            </content-loader>
+        </div>
+        <nb-list *ngIf="!isBusy">
             <nb-list-item *ngFor="let categoryBalance of categoryBalances">
                 <nb-icon
                     icon="radio-button-on"
@@ -26,20 +26,22 @@
                 </div>
                 <span>{{ categoryBalance.change | shortNumber }}</span>
             </nb-list-item>
-            <nb-list-item class="d-flex justify-content-between" [class.border-top]="categoryBalances.length > 0">
-                <div class="text-center">
-                    <div class="text-hint mb-0">INCOME</div>
-                    <strong>{{ income | shortNumber }}</strong>
-                </div>
-                <div class="text-center">
-                    <div class="text-hint mb-0">EXPENSE</div>
-                    <strong>{{ expense | shortNumber }}</strong>
-                </div>
-                <div class="text-center">
-                    <div class="text-hint mb-0">CHANGE</div>
-                    <strong>{{ change | shortNumber }}</strong>
-                </div>
-            </nb-list-item>
         </nb-list>
-    </div>
-</div>
+    </nb-card-body>
+    <nb-card-footer
+        class="with-background d-flex justify-content-between"
+        [class.border-top]="categoryBalances.length > 0">
+        <div class="text-center">
+            <div class="text-hint mb-0">INCOME</div>
+            <strong>{{ income | shortNumber }}</strong>
+        </div>
+        <div class="text-center">
+            <div class="text-hint mb-0">EXPENSE</div>
+            <strong>{{ expense | shortNumber }}</strong>
+        </div>
+        <div class="text-center">
+            <div class="text-hint mb-0">CHANGE</div>
+            <strong>{{ change | shortNumber }}</strong>
+        </div>
+    </nb-card-footer>
+</nb-card>
