--- a/frontend/src/app/modules/main/components/sidebar/calendar-list/calendar-list.component.html
+++ b/frontend/src/app/modules/main/components/sidebar/calendar-list/calendar-list.component.html
@@ -43,7 +43,7 @@
                                 ghost
                                 size="small"
                                 status="success"
-                                (click)="importStatement(calendar)"
+                                (click)="statementImportService.uploadStatement(calendar)"
                                 title="Import / export statements">
                                 <nb-icon icon="attach-outline"></nb-icon>
                             </button>
