--- a/frontend/src/app/modules/main/components/expense-report/expense-report.component.scss
+++ b/frontend/src/app/modules/main/components/expense-report/expense-report.component.scss
@@ -1,7 +1,7 @@
 @import 'bootstrap/scss/bootstrap-utilities';
 @import '../../../../../theme';
 
-:host > div {
+:host > nb-card {
     max-height: 640px;
     width: 300px;
 }
