feature: statement import (#121)
* import rework

* disable code coverage comment in PRs

* improved statement upload & expense review dialog

* docs(import): basic import information

* fix(import): ISO:20022 bugfixes

* fix(import): prettier fixes

--- a/frontend/src/app/modules/main/components/sidebar/actions/actions.component.html
+++ b/frontend/src/app/modules/main/components/sidebar/actions/actions.component.html
@@ -2,6 +2,13 @@
     <nb-actions size="small">
         <nb-action icon="bar-chart-outline" routerLink="/reports" nbTooltip="Reports"></nb-action>
         <nb-action icon="pricetags-outline" (click)="editCategories()" nbTooltip="Categories"></nb-action>
+        <nb-action
+            icon="attach-2-outline"
+            (click)="statementImportService.processImport()"
+            badgeDot
+            badgePosition="top right"
+            badgeStatus="danger"
+            *ngIf="statementImportService.expenses.length"></nb-action>
     </nb-actions>
 </div>
 
