--- a/frontend/src/app/modules/main/dialogs/calendars-dialog/calendar-list/calendar-list.component.html
+++ b/frontend/src/app/modules/main/dialogs/calendars-dialog/calendar-list/calendar-list.component.html
@@ -1,6 +1,6 @@
 <nb-card class="dialog">
-    <nb-card-header>
-        <button nbButton status="primary" ghost (click)="back.emit(true)">
+    <nb-card-header class="d-flex align-items-center">
+        <button nbButton status="primary" ghost (click)="back.emit(true)" class="me-3">
             <nb-icon icon="arrow-back-outline"></nb-icon>
         </button>
         Select calendar
