--- a/frontend/src/app/modules/main/dialogs/datepicker-dialog/datepicker-dialog.component.html
+++ b/frontend/src/app/modules/main/dialogs/datepicker-dialog/datepicker-dialog.component.html
@@ -1,5 +1,5 @@
 <nb-card class="dialog">
-    <nb-card-header i18n>
+    <nb-card-header class="d-flex align-items-center justify-content-between">
         <button nbButton status="primary" ghost (click)="dialogRef.close()">
             <nb-icon icon="arrow-back-outline"></nb-icon>
         </button>
