--- a/frontend/src/app/modules/main/dialogs/expense-dialog/components/transfer/transfer.component.html
+++ b/frontend/src/app/modules/main/dialogs/expense-dialog/components/transfer/transfer.component.html
@@ -26,6 +26,7 @@
 
         <app-expense-dialog-footer
             [form]="transferForm"
+            [deletable]="false"
             [submitEnabled]="this.destinationCalendar?.id !== this.expense.calendar?.id"
             [expense]="expense" />
     </div>
