--- a/frontend/src/app/modules/main/dialogs/categories-dialog/category-edit/category-edit.component.html
+++ b/frontend/src/app/modules/main/dialogs/categories-dialog/category-edit/category-edit.component.html
@@ -1,7 +1,7 @@
 <form #categoryForm="ngForm" (submit)="save.emit(this.category)" autocomplete="off">
     <nb-card class="dialog">
-        <nb-card-header i18n>
-            <button nbButton status="primary" ghost (click)="back.emit()">
+        <nb-card-header class="d-flex align-items-center">
+            <button nbButton status="primary" ghost (click)="back.emit()" class="me-3">
                 <nb-icon icon="arrow-back-outline"></nb-icon>
             </button>
             Manage category
