--- a/frontend/src/app/modules/main/dialogs/categories-dialog/category-list/category-list.component.html
+++ b/frontend/src/app/modules/main/dialogs/categories-dialog/category-list/category-list.component.html
@@ -1,6 +1,6 @@
 <nb-card class="dialog" size="large">
-    <nb-card-header>
-        <button nbButton status="primary" ghost (click)="back.emit()">
+    <nb-card-header class="d-flex align-items-center">
+        <button nbButton status="primary" ghost (click)="back.emit()" class="me-3">
             <nb-icon icon="arrow-back-outline"></nb-icon>
         </button>
         Select category
