--- a/frontend/src/app/modules/main/dialogs/expense-dialog/expense-dialog.component.html
+++ b/frontend/src/app/modules/main/dialogs/expense-dialog/expense-dialog.component.html
@@ -6,17 +6,23 @@
                 tabTitle="Expense"
                 class="h-100 p-0"
                 [tabId]="TAB_ID_EXPENSE">
-                <app-expense [expense]="expense" *nbTabContent #tabExpense></app-expense>
+                <app-expense
+                    [expense]="expense"
+                    *nbTabContent
+                    #tabExpense
+                    [onSubmit]="onExpenseSubmit"
+                    [onDelete]="onExpenseDelete"></app-expense>
             </nb-tab>
-            <nb-tab *ngIf="!this.expense.id" tabTitle="Transfer" class="h-100 p-0" [tabId]="TAB_ID_TRANSFER">
+            <nb-tab *ngIf="showTransferTab" tabTitle="Transfer" class="h-100 p-0" [tabId]="TAB_ID_TRANSFER">
                 <app-transfer [expense]="transfer" *nbTabContent #tabTransfer></app-transfer>
             </nb-tab>
-            <nb-tab
-                *ngIf="!this.expense.id || this.expense.category.type === TYPE_BALANCE_UPDATE"
-                tabTitle="Balance"
-                class="h-100 p-0"
-                [tabId]="TAB_ID_BALANCE">
-                <app-balance [expense]="balance" *nbTabContent #tabBalance></app-balance>
+            <nb-tab *ngIf="showBalanceTab" tabTitle="Balance" class="h-100 p-0" [tabId]="TAB_ID_BALANCE">
+                <app-balance
+                    [expense]="balance"
+                    *nbTabContent
+                    #tabBalance
+                    [onSubmit]="onBalanceSubmit"
+                    [onDelete]="onBalanceDelete"></app-balance>
             </nb-tab>
         </nb-tabset>
     </nb-card-body>
