--- a/frontend/src/app/modules/main/dialogs/calendars-dialog/calendar-list/calendar-list.component.html
+++ b/frontend/src/app/modules/main/dialogs/calendars-dialog/calendar-list/calendar-list.component.html
@@ -7,6 +7,7 @@
     </nb-card-header>
     <nb-list>
         <nb-list-item
+            [@slideAnimation]
             class="actionable"
             *ngFor="let calendar of calendars"
             [class.active]="isActive(calendar)"
