--- a/frontend/src/app/modules/main/dialogs/categories-dialog/category-list/category-list.component.html
+++ b/frontend/src/app/modules/main/dialogs/categories-dialog/category-list/category-list.component.html
@@ -8,6 +8,7 @@
     <nb-list>
         <nb-list-item
             class="actionable"
+            [@slideAnimation]
             *ngFor="let category of categories"
             [class.active]="isActive(category)"
             [style.background-color]="isActive(category) ? category.color : ''"
