--- a/frontend/src/app/modules/main/dialogs/statement-review-dialog/statement-review-dialog.component.html
+++ b/frontend/src/app/modules/main/dialogs/statement-review-dialog/statement-review-dialog.component.html
@@ -1,31 +1,37 @@
 <nb-card class="dialog" style="min-height: 200px">
     <nb-card-header class="d-flex align-items-center justify-content-between">
         Bank statement import review
-        <button nbButton status="primary" ghost (click)="dialogRef.close()">
+        <button nbButton status="primary" ghost (click)="dialogRef.close({ action: DIALOG_ACTION_CLOSE, calendarRefreshNeeded: calendarRefreshNeeded})">
             <nb-icon icon="close-outline"></nb-icon>
         </button>
     </nb-card-header>
     <nb-card-header class="d-flex with-background">
-        <small class="text-hint w-100">TOTAL</small>
+        <small class="text-hint w-100">TRANSACTIONS - {{ expenses.length }}</small>
         <span>{{ totalExpensesAmount | shortNumber }}</span>
     </nb-card-header>
     <nb-card-body class="p-0">
         <div *ngFor="let date of Object.keys(groupedByDates)">
             <nb-list>
-                <nb-list-item class="with-background">
-                    <div class="d-flex text-hint w-100">
-                        <nb-icon icon="calendar-outline" class="me-1"></nb-icon> {{ date }}
+                <nb-list-item [@slideAnimation] class="with-background text-hint">
+                    <div class="d-flex w-100"><nb-icon icon="calendar-outline" class="me-1"></nb-icon> {{ date }}</div>
+                    <div>
+                        {{ totalExpensesAmountByDates[date] | shortNumber }}
                     </div>
                 </nb-list-item>
 
-                <nb-list-item *ngFor="let expense of groupedByDates[date]" (click)="openExpense(expense)">
-                    <div class="text-truncate w-100 actionable">
+                <nb-list-item
+                    [@slideAnimation]
+                    *ngFor="let expense of groupedByDates[date]"
+                    (click)="!expense.id ? openExpense(expense) : null"
+                    [class.actionable]="!expense.id"
+                    [class.text-hint]="!expense.confirmed">
+                    <nb-icon
+                        [icon]="expense.confirmed ? 'radio-button-on' : 'radio-button-off'"
+                        class="flex-shrink-0 me-2"
+                        [ngStyle]="{ color: expense.category?.color }"></nb-icon>
+                    <div class="text-truncate w-100">
                         {{ expense.label }}
                         <small class="d-flex align-items-center text-hint">
-                            <nb-icon
-                                icon="radio-button-on"
-                                class="flex-shrink-0 me-1"
-                                [ngStyle]="{ color: expense.category?.color }"></nb-icon>
                             {{ expense.category.name }}
                         </small>
                     </div>
@@ -38,7 +44,7 @@
         <div class="d-flex flex-row-reverse justify-content-between">
             <button nbButton type="button" status="primary" (click)="importExpenses()">
                 <nb-icon icon="save-outline"></nb-icon>
-                Save
+                Import All
             </button>
 
             <button
