fix: minor gui improvements

--- a/frontend/src/app/modules/main/dialogs/expense-dialog/components/expense/expense.component.html
+++ b/frontend/src/app/modules/main/dialogs/expense-dialog/components/expense/expense.component.html
@@ -20,6 +20,6 @@
             [form]="expenseForm"
             [expense]="expense"
             [deletable]="deletable"
-            (delete)="onDelete ? onDelete() : onDefaultDelete" />
+            (delete)="onDelete ? onDelete() : onDefaultDelete()" />
     </div>
 </form>
