fix: number input on iOS devices

--- a/frontend/src/app/modules/main/dialogs/expense-dialog/components/expense-input.component.html
+++ b/frontend/src/app/modules/main/dialogs/expense-dialog/components/expense-input.component.html
@@ -22,7 +22,7 @@
                 tabIndex="1"
                 placeholder="{{ 0 | shortNumber }}"
                 name="amount"
-                inputmode="numeric"
+                inputmode="decimal"
                 pattern="[0-9.,]+"
                 id="expense-amount"
                 [(ngModel)]="expense.absoluteAmount"
