--- a/frontend/src/app/modules/main/header/header.component.html
+++ b/frontend/src/app/modules/main/header/header.component.html
@@ -9,22 +9,24 @@
                 id="sidebar-toggler">
                 <nb-icon icon="menu-2-outline"></nb-icon>
             </button>
-            <nb-badge
-                *ngIf="statementImportService.expenses.length"
-                [dotMode]="true"
-                status="danger"
-                position="top right"></nb-badge>
+            @if (statementImportService.expenses.length) {
+                <nb-badge
+                    [dotMode]="true"
+                    status="danger"
+                    position="top right"></nb-badge>
+            }
         </div>
 
         <div class="mx-3 calendar-info">
             <strong class="d-block">{{ calendar?.name }}</strong>
             <small class="d-block text-hint">
-                <span title="Current balance">{{ calendar?.balance | shortNumber }}</span>
-                <span *ngIf="visibleDateBalance">
+                <span title="Current balance: {{ calendar?.balance | number:'.2-2' }}">{{ calendar?.balance | shortNumber }}</span>
+                @if (visibleDateBalance) {
+                    <span>
                     •
                     <a
                         href="#"
-                        title="This month balance"
+                        title="This month balance: {{ visibleDateBalance | number:'.2-2' }}"
                         [nbPopover]="expenseReportComponent"
                         nbPopoverPlacement="bottom"
                         (click)="$event.preventDefault()"
@@ -33,6 +35,7 @@
                         {{ visibleDateBalance | shortNumber }}
                     </a>
                 </span>
+                }
             </small>
         </div>
     </div>
