--- a/frontend/src/app/modules/main/header/header.component.html
+++ b/frontend/src/app/modules/main/header/header.component.html
@@ -10,31 +10,30 @@
                 <nb-icon icon="menu-2-outline"></nb-icon>
             </button>
             @if (statementImportService.expenses.length) {
-                <nb-badge
-                    [dotMode]="true"
-                    status="danger"
-                    position="top right"></nb-badge>
+                <nb-badge [dotMode]="true" status="danger" position="top right"></nb-badge>
             }
         </div>
 
         <div class="mx-3 calendar-info">
             <strong class="d-block">{{ calendar?.name }}</strong>
             <small class="d-block text-hint">
-                <span title="Current balance: {{ calendar?.balance | number:'.2-2' }}">{{ calendar?.balance | shortNumber }}</span>
+                <span title="Current balance: {{ calendar?.balance | number: '.2-2' }}">{{
+                    calendar?.balance | shortNumber
+                }}</span>
                 @if (visibleDateBalance) {
                     <span>
-                    •
-                    <a
-                        href="#"
-                        title="This month balance: {{ visibleDateBalance | number:'.2-2' }}"
-                        [nbPopover]="expenseReportComponent"
-                        nbPopoverPlacement="bottom"
-                        (click)="$event.preventDefault()"
-                        [class.text-success]="visibleDateBalance > 0"
-                        [class.text-danger]="visibleDateBalance < 0">
-                        {{ visibleDateBalance | shortNumber }}
-                    </a>
-                </span>
+                        •
+                        <a
+                            href="#"
+                            title="This month balance: {{ visibleDateBalance | number: '.2-2' }}"
+                            [nbPopover]="expenseReportComponent"
+                            nbPopoverPlacement="bottom"
+                            (click)="$event.preventDefault()"
+                            [class.text-success]="visibleDateBalance > 0"
+                            [class.text-danger]="visibleDateBalance < 0">
+                            {{ visibleDateBalance | shortNumber }}
+                        </a>
+                    </span>
                 }
             </small>
         </div>
