fix: bump angular version

--- a/frontend/src/app/modules/auth/components/login/login.component.html
+++ b/frontend/src/app/modules/auth/components/login/login.component.html
@@ -10,19 +10,23 @@
 
 <h1 id="title" class="title">Welcome to Expensave!</h1>
 
-<nb-alert *ngIf="showMessages.error && errors?.length && !submitted" outline="danger" role="alert">
-    <p class="alert-title"><b>Oh snap!</b></p>
-    <ul class="alert-message-list">
-        <li *ngFor="let error of errors" class="alert-message">{{ error }}</li>
-    </ul>
-</nb-alert>
+@if (showMessages.error && errors?.length && !submitted) {
+    <nb-alert outline="danger" role="alert">
+        <p class="alert-title"><b>Oh snap!</b></p>
+        <ul class="alert-message-list">
+            <li *ngFor="let error of errors" class="alert-message">{{ error }}</li>
+        </ul>
+    </nb-alert>
+}
 
-<nb-alert *ngIf="showMessages.success && messages?.length && !submitted" outline="success" role="alert">
-    <p class="alert-title"><b>Hooray!</b></p>
-    <ul class="alert-message-list">
-        <li *ngFor="let message of messages" class="alert-message">{{ message }}</li>
-    </ul>
-</nb-alert>
+@if (showMessages.success && messages?.length && !submitted) {
+    <nb-alert outline="success" role="alert">
+        <p class="alert-title"><b>Hooray!</b></p>
+        <ul class="alert-message-list">
+            <li *ngFor="let message of messages" class="alert-message">{{ message }}</li>
+        </ul>
+    </nb-alert>
+}
 
 <form (ngSubmit)="login()" #form="ngForm" aria-labelledby="title">
     <div class="form-control-group">
